# seplis-play-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Caddyfile  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  test.yml
seplis_play/: __init__.py  browser_media_types.py  client.py  config.py  constants.py  database.py  dependencies.py  main.py  models.py  runner.py  scan.py  scan_watch.py  schemas.py  setup_logger.py  testbase.py  utils.py
seplis_play/ffmpeg/: ffmpeg_constants.py  ffmpeg_job_context.py  ffmpeg_runner.py  ffmpeg_schemas.py
seplis_play/routes/: close_session_routes.py  download_source_routes.py  health_routes.py  hls_routes.py  keep_alive_routes.py  request_media_routes.py  sources_routes.py  subtitle_file_routes.py  thumbnails_routes.py  transcode_decision_routes.py
seplis_play/scanners/: __init__.py  episode_scan.py  movie_scan.py  scan_base.py  subtitle_scan.py
seplis_play/schemas/: page_cursor_schema.py  page_id_schema.py  source_metadata_schemas.py  source_schemas.py
seplis_play/transcoders/: base_transcoder.py  dash_transcoder.py  hls_transcoder.py  pipe_transcoder.py  subtitle_transcoder.py
seplis_play/transcoding/: base_transcoder.py  hls_transcoder.py  subtitle_transcoder.py  transcode_decision_schema.py  (+1 more)
seplis_play_server/: __init__.py  client.py  config.py  constants.py  database.py  dependencies.py  logger.py  main.py  models.py  runner.py  scan.py  scan_watch.py  schemas.py  testbase.py  utils.py
tests/: conftest.py
(+62 files in other folders)
